--- a/azure.yaml
+++ b/azure.yaml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
 name: aspire-azure-resources
+resourceGroup: ai-triage-hackathon
 services:  
   app:
     language: dotnet
