--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -32,9 +32,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: | 
-            8.x.x
-            9.x.x
+          dotnet-version: 9.x
 
       - name: Log in with Azure (Federated Credentials)
         run: |
