--- a/src/AspireAzureResources.AppHost/AspireAzureResources.AppHost.csproj
+++ b/src/AspireAzureResources.AppHost/AspireAzureResources.AppHost.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.2" />
+    <PackageReference Include="Aspire.Hosting.Azure.KeyVault" Version="9.4.2" />
   </ItemGroup>
 
 </Project>
